# amxmodx-tools

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
amxmodx-utils/: Cargo.toml
amxmodx-utils/src/: lib.rs
amxmodx-utils/src/amx/: mod.rs  opcode.rs  opcode_type.rs  opcodes_iterator.rs  parser.rs
amxmodx-utils/src/amx/function/: mod.rs  native.rs  public.rs
amxmodx-utils/src/amxx/: mod.rs
amxmodx-utils/src/amxx/file/: error.rs  errors.rs  mod.rs  parser.rs  section.rs  sections.rs
amxmodx-utils/src/amxx/file/section/: mod.rs  sections_iterator.rs
amxmodx-utils/src/utils/: byte_string.rs  mod.rs
amxmodx-utils/test/fixtures/amxx/: simple.amxx183.only_sections.amxx  simple.cellsize4_section.amxx183  simple.sma
rxxma/: Cargo.toml  LICENSE  README.md
rxxma/src/: main.rs
rxxma/src/amx/: mod.rs
rxxma/src/amxx/: mod.rs
rxxma/src/ast/: decompiler.rs  function.rs  mod.rs  tree_element.rs
rxxma/src/old_amx/: mod.rs
rxxma/src/util/: mod.rs  string_zero.rs  tests.rs
rxxma/test/fixtures/: cell_constants.amx183  cell_constants.amxx  cell_constants.sma  shl_minimal_case.amxx  shl_minimal_case.sma  simple.amx183  simple.amxx181  (+1 more)
src/: lib.rs  main.rs
src/amx/: opcode.rs  public.rs
src/amxmod/: mod.rs  native.rs  opcode.rs  opcode_type.rs  plugin.rs
src/amxmodx/: file.rs  mod.rs  section.rs
src/amxx/: section.rs
src/ast/: decompiler.rs  function.rs  function_call.rs  mod.rs  opcode.rs  plugin.rs  tree_element.rs
src/util/: debug_u8.rs  mod.rs  string_zero.rs  try_from.rs
test/fixtures/: simple.amxx183  two_natives.amx183  two_natives.amxx
(+10 files in other folders)
