[package]
name = "rxxma"
version = "0.0.1"
authors = ["Fedcomp"]

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
clap = "^2.30.0"
byteorder = "1"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
enum_primitive = "*"
log = "0.4.0"
env_logger = "0.5.4"
ascii = "0.8"
