[package]
name = "amxmodx-utils"
version = "0.0.1"
authors = ["Fedcomp"]
edition = "2018"

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
bytes = "0.4.12"
byteorder = "1.3.1"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
failure = "0.1.5"
bitflags = "1.0.4"
num-traits = "0.2"
num-derive = "0.2"
getset = "0.0.7"